# QUtil

./: .gitignore  CMakeLists.txt  README.md  nac.py
include/: Model.hpp  QUtil.hpp  RK4.h  RK4.hpp  gslextra.h  gslextra.hpp
src/: hello.cpp
test/: CMakeLists.txt  TestGslextra.cpp  TestQMath.cpp
